fixed responsive navbar spacing

--- a/_assets/css/main.scss
+++ b/_assets/css/main.scss
@@ -36,7 +36,6 @@ $imgWidth: 450px;
 
     @include media-breakpoint-down(xl) {
         ul > * {
-            padding: 0 !important;
             margin: 0 1.125 * $spacer;
             border-bottom: 1px dotted;
             font-size: 0.75 * $spacer;
@@ -44,7 +43,9 @@ $imgWidth: 450px;
     }
 
     .nav-item {
-        padding: 0 var(--bs-gutter-x, 0.75 * $spacer);
+        @include media-breakpoint-up(xl) {
+            padding: 0 var(--bs-gutter-x, 0.75 * $spacer);
+        }
 
         a.nav-link.active {
             color: $nav-link-hover-color;
